# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  const.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_even.py  calc.py  engine.py  even.py  games_logic.py  gcd.py  logic_brain_calc.py  logic_brain_even.py  logic_brain_gcd.py  logic_brain_prime.py  logic_brain_progression.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
