[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This is the first final project as part of the learning process at Hexlet. It consists of five mini-games related to mathematics, implemented following the DRY (Don’t Repeat Yourself) principle."
authors = ["VictorVangeli <whgaleon1@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
